Arregle bugs reponsive de Chrome.

--- a/src/App.css
+++ b/src/App.css
@@ -1444,6 +1444,22 @@ form {
   .detail-description {
     margin-left: 0px !important;
   }
+
+  .css-1d485ge {
+    margin-left: -16px !important;
+  }
+
+  .css-zuvg90 {
+    margin-top: 50px !important;
+  }
+
+  .css-1hw9j7s {
+    margin-left: 60px !important;
+  }
+
+  .css-jgrsjy {
+    margin-left: 38px !important;
+  }
 }
 @media (max-width: 375px) {
   .ul-navBar {
