--- a/src/styles.scss
+++ b/src/styles.scss
@@ -218,10 +218,10 @@
     margin-left: 100px !important;
     margin-bottom: 50px !important;
   }
-  .detail-description{
-    margin-left: 30px!important;
+  .detail-description {
+    margin-left: 30px !important;
   }
-  .detail-SmallCart{
+  .detail-SmallCart {
     margin-bottom: 100px !important;
   }
 }
@@ -468,8 +468,20 @@
     margin-left: 0px !important;
     margin-bottom: 0px !important;
   }
-  .detail-description{
-    margin-left: 0px!important;
+  .detail-description {
+    margin-left: 0px !important;
+  }
+  .css-1d485ge {
+    margin-left: -16px !important;
+  }
+  .css-zuvg90 {
+    margin-top: 50px !important;
+  }
+  .css-1hw9j7s {
+    margin-left: 60px!important;
+  }
+  .css-jgrsjy{
+    margin-left: 38px!important;
   }
 }
 
