--- a/src/components/Cart/_cart.scss
+++ b/src/components/Cart/_cart.scss
@@ -33,3 +33,21 @@
 #h2-products-cart {
   color: #6dc5e9;
 }
+
+.cart-title {
+  font-size: 30px;
+  margin-top: 20px;
+}
+
+.cart-content {
+  width: 60%;
+}
+
+.price-title {
+  margin-right: 102px;
+}
+
+.truck-in-cart {
+  width: 60%!important;
+  padding: 8px;
+}
