--- a/src/components/productInCartView/_productInCartView.scss
+++ b/src/components/productInCartView/_productInCartView.scss
@@ -14,3 +14,20 @@
   text-align: center;
   margin-left: 15px;
 }
+
+.product-total-count {
+  margin-top: 40px;
+  font-weight: bold;
+  font-size: 20px;
+  margin-left: 41px;
+}
+
+.productInCart-img {
+  width: 70% !important;
+}
+
+.x-product-delete {
+  cursor: pointer;
+  border: 1px solid #e6e6e6;
+  border-radius: 5px;
+}
