--- a/src/styles.scss
+++ b/src/styles.scss
@@ -478,10 +478,45 @@
     margin-top: 50px !important;
   }
   .css-1hw9j7s {
-    margin-left: 60px!important;
+    margin-left: 60px !important;
   }
-  .css-jgrsjy{
-    margin-left: 38px!important;
+  .css-jgrsjy {
+    margin-left: 38px !important;
+  }
+  .cart-content {
+    width: 90%;
+  }
+  .itemCount-content {
+    margin-left: 130px;
+  }
+  .product-total-count {
+    margin-left: 179px;
+  }
+  .productInCart-img {
+    width: 150% !important;
+  }
+  .productInCart-description-content {
+    margin-bottom: 30px;
+    margin-left: 100px;
+  }
+  .productInCart-description {
+    margin-left: 75px;
+  }
+  .x-product-delete {
+    margin-left: 30px;
+    margin-bottom: 10px;
+  }
+  .checkout-cart {
+    padding-left: 17px;
+  }
+  .p-articles-amount {
+    margin-left: 58px;
+  }
+  .truck-in-cart {
+    width: 185% !important;
+  }
+  #h3-cart {
+    margin-left: 40px;
   }
 }
 
