--- a/src/components/Cart/_cart.scss
+++ b/src/components/Cart/_cart.scss
@@ -48,6 +48,13 @@
 }
 
 .truck-in-cart {
-  width: 60%!important;
+  width: 60% !important;
   padding: 8px;
+}
+
+.btn-empty-view {
+  width: 15% !important;
+  display: block !important;
+  margin: 0px auto !important;
+  background: #47b8d6 !important;
 }
