--- a/src/styles.scss
+++ b/src/styles.scss
@@ -72,6 +72,21 @@
   .itemCount-div {
     margin-left: -46px;
   }
+  .btn-form-gray {
+    width: 45%;
+  }
+  #div-select {
+    margin-left: 0px;
+  }
+  #div-select select {
+    width: 87%;
+  }
+  .form_cashBox {
+    padding-bottom: 100px;
+  }
+  .btn-terminarCompra{
+    margin-left: 50px !important;
+  }
 }
 
 @media (max-width: 810px) {
@@ -267,6 +282,23 @@
   .price-title {
     margin-left: 0px;
     font-size: 18px;
+  }
+  .wrap-box {
+    width: 90%;
+  }
+  #div-select {
+    float: left;
+    margin-left: 0px;
+    margin-top: 10px;
+  }
+  .btn-form-gray {
+    height: 35px;
+  }
+  #p-shipping {
+    margin-left: 12px;
+  }
+  #div-select select {
+    width: 86%;
   }
 }
 
@@ -589,9 +621,40 @@
     margin-top: 40px !important;
     width: 80% !important;
   }
-  .itemCount-container{
+  .itemCount-container {
     margin-top: 0px;
-  
+  }
+  .wrap-box {
+    width: 85%;
+  }
+  .item-form {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding-top: 18px;
+    width: 85%;
+  }
+  #div-date {
+    margin-top: 15px;
+    float: none;
+    width: 90%;
+  }
+  #div-select {
+    margin-top: 15px !important;
+  }
+  #p-select {
+    margin-left: 80px;
+  }
+  #div-select select {
+    width: 95%;
+  }
+  .contained-purchaseSummary {
+    margin-bottom: 60px !important;
+    margin-top: 35px !important;
+  }
+  .btn-form-gray {
+    cursor: pointer;
+    margin-bottom: 3px;
+    width: 90%;
   }
 }
 
