--- a/src/styles.scss
+++ b/src/styles.scss
@@ -84,7 +84,7 @@
   .form_cashBox {
     padding-bottom: 100px;
   }
-  .btn-terminarCompra{
+  .btn-terminarCompra {
     margin-left: 50px !important;
   }
 }
@@ -293,6 +293,7 @@
   }
   .btn-form-gray {
     height: 35px;
+    width: 43%;
   }
   #p-shipping {
     margin-left: 12px;
@@ -635,8 +636,7 @@
   }
   #div-date {
     margin-top: 15px;
-    float: none;
-    width: 90%;
+    width: 92%;
   }
   #div-select {
     margin-top: 15px !important;
@@ -655,6 +655,10 @@
     cursor: pointer;
     margin-bottom: 3px;
     width: 90%;
+  }
+  #btn-resume {
+    display: flex;
+    margin-left: 50px !important;
   }
 }
 
